Fix albums view background on mobile

--- a/src/components/album/Album.scss
+++ b/src/components/album/Album.scss
@@ -19,7 +19,7 @@
   }
 
   &_cover {
-    width: 100%
+    width: 100%;
   }
 
   &:hover {
