--- a/src/views/app/AlbumsView.scss
+++ b/src/views/app/AlbumsView.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-position: right center;
     position: fixed;
-    opacity: .25 !important;
+    opacity: .25;
     top: 0;
     left: 0;
     width: 100%;
